crates/perl-lsp-completion/tests/snapshots/inc_path_snapshot_tests__depth_5_module.snap
---
source: crates/perl-lsp-completion/tests/inc_path_snapshot_tests.rs
expression: items
---
- label: "File::Path::To::Deep::Module"
  kind: Module
  detail: module (include)
  insert_text: "File::Path::To::Deep::Module"
  sort_text: "9_File::Path::To::Deep::Module"
  filter_text: "File::Path::To::Deep::Module"
