crates/perl-lsp-completion/tests/snapshots/inc_path_snapshot_tests__module_with_numbers_math2.snap
---
source: crates/perl-lsp-completion/tests/inc_path_snapshot_tests.rs
expression: items_math2
---
- label: Math2D
  kind: Module
  detail: module (include)
  insert_text: Math2D
  sort_text: 9_Math2D
  filter_text: Math2D
