crates/perl-lsp-completion/tests/snapshots/inc_path_snapshot_tests__multiple_modules_same_dir.snap
---
source: crates/perl-lsp-completion/tests/inc_path_snapshot_tests.rs
expression: items
---
- label: Alpha
  kind: Module
  detail: module (include)
  insert_text: Alpha
  sort_text: 9_Alpha
  filter_text: Alpha
- label: Beta
  kind: Module
  detail: module (include)
  insert_text: Beta
  sort_text: 9_Beta
  filter_text: Beta
- label: Gamma
  kind: Module
  detail: module (include)
  insert_text: Gamma
  sort_text: 9_Gamma
  filter_text: Gamma
