crates/perl-lsp-completion/tests/snapshots/inc_path_snapshot_tests__multiple_paths_dedup.snap
---
source: crates/perl-lsp-completion/tests/inc_path_snapshot_tests.rs
expression: items
---
- label: "Shared::Module"
  kind: Module
  detail: module (include)
  insert_text: "Shared::Module"
  sort_text: "9_Shared::Module"
  filter_text: "Shared::Module"
