crates/perl-lsp-completion/tests/snapshots/inc_path_snapshot_tests__nested_module.snap
---
source: crates/perl-lsp-completion/tests/inc_path_snapshot_tests.rs
expression: items
---
- label: "File::Path::To::Module"
  kind: Module
  detail: module (include)
  insert_text: "File::Path::To::Module"
  sort_text: "9_File::Path::To::Module"
  filter_text: "File::Path::To::Module"
