crates/perl-lsp-completion/tests/snapshots/inc_path_snapshot_tests__non_pm_excluded.snap
---
source: crates/perl-lsp-completion/tests/inc_path_snapshot_tests.rs
expression: items
---
- label: "Valid::Module"
  kind: Module
  detail: module (include)
  insert_text: "Valid::Module"
  sort_text: "9_Valid::Module"
  filter_text: "Valid::Module"
