crates/perl-lsp-completion/tests/snapshots/inc_path_snapshot_tests__prefix_filtering.snap
---
source: crates/perl-lsp-completion/tests/inc_path_snapshot_tests.rs
expression: items
---
- label: "DBD::SQLite"
  kind: Module
  detail: module (include)
  insert_text: "DBD::SQLite"
  sort_text: "9_DBD::SQLite"
  filter_text: "DBD::SQLite"
- label: DBI
  kind: Module
  detail: module (include)
  insert_text: DBI
  sort_text: 9_DBI
  filter_text: DBI
