crates/perl-lsp-completion/tests/snapshots/inc_path_snapshot_tests__root_module.snap
---
source: crates/perl-lsp-completion/tests/inc_path_snapshot_tests.rs
expression: items
---
- label: DBI
  kind: Module
  detail: module (include)
  insert_text: DBI
  sort_text: 9_DBI
  filter_text: DBI
